recursion.logo.koch.SquareKoch.scala.error
Erreur de compilation :
SquareKoch:19: error: identifier expected but ')' found.
    squareSide(levels-1,length/3.)
                                 ^SquareKoch:21: error: identifier expected but ')' found.
    squareSide(levels-1,length/3.)
                                 ^SquareKoch:23: error: identifier expected but ')' found.
    squareSide(levels-1,length/3.)
                                 ^SquareKoch:25: error: identifier expected but ')' found.
    squareSide(levels-1,length/3.)
                                 ^SquareKoch:27: error: identifier expected but ')' found.
    squareSide(levels-1,length/3.)
                                 ^